tests/ui/fail/sqlo_set_only_pk_field_no_update_macro.rs
use sqlo::Sqlo;

#[derive(Debug, PartialEq, Sqlo)]
struct IdUniqueInt {
    id: i64,
}

#[async_std::main]
async fn main() {
set_IdUniqueInt!()
}
